<resources>
    <string name="app_name">KBAssist</string>
    <string name="title_activity_req">ReqActivity</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Requisition view -->
    <string name="btn_scan_bracelet">Scan armbånd</string>
    <string name="btn_scan_sample">Scan prøveglas</string>
    <string name="text_patient_name">Patient navn</string>
    <string name="text_patient_cpr">Patient CPR nummer</string>
    <string name="label_patient_room">Stue:</string>
    <string name="label_patient_bed">Seng:</string>
    <string name="label_req_testdate">Prøvetid:</string>
    <string name="text_req_testdate">01-01-2017 11:00</string>
    <string name="label_req_fulfilled_date">Udført:</string>
    <string name="text_req_fulfilled_date">Afventer</string>
    <string name="label_req_number">Rkv no:</string>
    <string name="text_req_number">101153</string>
    <string name="title_req_requistor">Rekvirent:</string>
    <string name="text_req_requisitor">Rekvirent</string>
    <string name="text_req_requistor_department">Afdeling</string>
    <string name="text_req_requisitor_address">Adresse</string>
    <string name="text_req_requisitor_zip">Postnummer By</string>
    <string name="text_req_requisitor_country">Danmark</string>
    <string name="icon_desc_expand_req">Expand Requisitor Icon</string>
    <string name="text_patient_room">11</string>
    <string name="text_patient_bed">2</string>
    <string name="label_patient_dept">Afd:</string>
    <string name="text_patient_dept">Afd:</string>
    <string name="list_req_overview_title">Sample text</string>
    <string name="list_req_overview_cpr">Subtitle</string>
    <string name="list_req_overview_dept">Afd:</string>
    <string name="list_req_overview_room">Stue:</string>
    <string name="list_req_overview_room_number">11</string>
    <string name="list_req_overview_bed">Seng:</string>
    <string name="list_req_overview_bed_number">2</string>
    <string name="reqLabelDescription">Pt. oplysninger:</string>
    <string name="reqTextDescription">Ingen yderligere oplysninger.</string>
    <string name="list_department_name">Department name</string>
    <string name="listDeptUnfinishedNum">0</string>
    <string name="listDeptText">ud af</string>
    <string name="listDeptTotalReqNum">10</string>
    <string name="listDeptTakenText">rekvisitioner færdige</string>
    <string name="listDeptOverviewBtnAssist">Assistér</string>
    <string name="loginHintUsername">Brugernavn</string>
    <string name="loginTextPassword">Kodeord</string>
    <string name="loginTextLogin">Login</string>
    <string name="menuTextHome">Hjem</string>
    <string name="menuTextDepartments">Afdelinger</string>
    <string name="menuTextLogout">Log ud</string>
    <string name="menuTextName">John Doe</string>
    <string name="menuTextUsername">john@doe.com</string>
    <string name="loginTextAppName">KBAssist</string>
    <string name="nav_teams">Teams</string>
    <string name="req_finished_icon">reqFinishedIcon</string>
    <string name="menu_req_done">Afsluttede rekvisitioner</string>
    <string name="team_list_name">Team name</string>
    <string name="team_list_num_users_desc">aktiv(e) prøvetagere</string>
</resources>
