<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menuTextHome" />
        <item
            android:id="@+id/nav_depts"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menuTextDepartments" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menuTextLogout" />
    </group>

</menu>
