<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:id="@+id/teamListName"
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Team name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamListFinishedReq"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/listDeptUnfinishedNum"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamListSeparatorText"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:text="@string/listDeptText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamListTotalReq"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:text="@string/listDeptTotalReqNum"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamListTakenText"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:text="@string/listDeptTakenText"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/teamListAssistBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:text="@string/listDeptOverviewBtnAssist" />
    </LinearLayout>
</LinearLayout>