<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/requisitionDoneProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/requisitionDoneProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1.0"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight=".8">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textReqDoneTestDateLabel"
                                android:paddingStart="16dp"
                                android:paddingTop="8dp"
                                android:paddingEnd="4dp"
                                android:text="@string/label_req_testdate"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textReqDoneTestDate"
                                android:text="@string/text_req_testdate"
                                android:paddingTop="8dp"
                                android:layout_toEndOf="@+id/textReqDoneTestDateLabel"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textReqDoneFulfilledDateLabel"
                                android:paddingStart="16dp"
                                android:paddingTop="8dp"
                                android:paddingEnd="4dp"
                                android:text="@string/label_req_fulfilled_date"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textReqDoneFulfilledDate"
                                android:text="@string/text_req_fulfilled_date"
                                android:paddingTop="8dp"
                                android:layout_toEndOf="@+id/textReqDoneFulfilledDateLabel"/>
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:id="@+id/reqDoneFinishIcon"
                        android:orientation="horizontal">
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textReqDonePatientName"
                        android:layout_marginBottom="6dp"
                        android:text="@string/text_patient_name"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textReqDonePatientCpr"
                        android:layout_marginBottom="6dp"
                        android:text="@string/text_patient_cpr"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientDeptLabel"
                            android:text="@string/label_patient_dept"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientDept"
                            android:text="@string/text_patient_dept"
                            android:textSize="16sp"
                            android:layout_marginEnd="12dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientRoomLabel"
                            android:layout_marginBottom="6dp"
                            android:text="@string/label_patient_room"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientRoom"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:text="@string/text_patient_room"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientBedLabel"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/label_patient_bed"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDonePatientBed"
                            android:layout_marginBottom="6dp"
                            android:text="@string/text_patient_bed"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reqDoneLabelDescription"
                        android:text="@string/reqLabelDescription"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textReqDoneDescription"
                        android:text="@string/reqTextDescription"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="12dp"
                    android:id="@+id/layoutReqDoneRequestorContainer">
                    <LinearLayout
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestor"
                            android:text="@string/title_req_requistor"
                            android:layout_marginEnd="12dp"
                            android:textSize="14sp"
                            android:textStyle="normal|italic"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestorName"
                            android:layout_marginBottom="6dp"
                            android:text="@string/text_req_requisitor"
                            android:layout_weight="0.9"
                            android:textSize="14sp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnReqDoneExpand"
                            android:src="@drawable/ic_expand_more_black_24dp"
                            android:contentDescription="@string/icon_desc_expand_req" />
                    </LinearLayout>
                    <LinearLayout
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutReqDoneRequestorDesc"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestorDepartment"
                            android:layout_marginBottom="6dp"
                            android:text="@string/text_req_requistor_department"
                            android:textSize="14sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestorAddress"
                            android:layout_marginBottom="6dp"
                            android:text="@string/text_req_requisitor_address"
                            android:textSize="14sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestorZip"
                            android:layout_marginBottom="6dp"
                            android:text="@string/text_req_requisitor_zip"
                            android:textSize="14sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textReqDoneRequestorCountry"
                            android:text="@string/text_req_requisitor_country"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
